2006-06-20  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-custom-error.tcc (format_error): detail and error
	arguments were used in the wrong order in the two argument case.

	* schroot/dchroot-chroot-config.cc (parse_data): Use the
	parse_error class.

	* schroot/sbuild-chroot-config.(cc|h): Use the custom_error
	exception class.  Merge check_security with load_data.
	(load_data): Report filename when throwing a parse error.

2006-06-20  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-personality.(cc|h): Use the custom_error
	exception class.

2006-06-20  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.h: Reindent error codes.

	* schroot/sbuild-lock.(cc|h): Use the custom_error exception
	class.

2006-06-19  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot.(cc|h), schroot/sbuild-chroot-file.cc,
	schroot/sbuild-chroot-block-device.cc,
	schroot/sbuild-chroot-lvm-snapshot.cc: Use the custom_error
	exception class.

2006-06-19  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-auth.(cc|h), schroot/sbuild-session.(cc|h),
	schroot/dchroot-session.cc (run_impl): Use new templated exception
	type.

	* schroot/sbuild-session-error.(cc|h): Remove.

	* schroot/sbuild-auth-error.(cc|h): Remove.

	* schroot/sbuild-custom-error.(cc|h): New files, providing an
	exception class templated on an error code enum.  It replaces the
	auth_error and session_error exception classes.

2006-06-19  Roger Leigh  <rleigh@debian.org>

	* schroot/dchroot-session.cc (run_impl): Throw a session_error in
	place of a runtime_error_custom.

	* schroot/sbuild-session.cc: Throw a session_error in place of a
	runtime_error_custom.  Correct capitalisation of error messages.
	Don't throw an exception when a child exits with a nonzero exit
	status.

	* schroot/sbuild-session.h: Use session_error as the error type.

	* schroot/sbuild-auth.cc: Throw an auth_error in place of a
	runtime_error_custom.
	(pam_strerror): New private method to get a PAM error message.
